# vehicle_insurance_mlops

./: .gitignore  pyproject.toml  template.py
src/vehicle_insurance/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/vehicle_insurance/configuration/: mongo_db_connection.py
src/vehicle_insurance/constants/: __init__.py
src/vehicle_insurance/data_access/: proj1_data.py
src/vehicle_insurance/entity/: artifact_entity.py  config_entity.py  estimator.py
src/vehicle_insurance/exception/: __init__.py
src/vehicle_insurance/logger/: __init__.py
src/vehicle_insurance/pipeline/: training_pipeline.py
src/vehicle_insurance/utils/: main_utils.py
