[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle-insurance-mlops"
version = "0.0.1"
description = "End-to-end MLOps project for vehicle insurance prediction"
authors = [
    { name = "Gaurav Chauhan", email = "chauhan7gaurav@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dynamic = ["dependencies"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = {} }

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
